Fixing how images embedded in rich-text are displayed on mobile

--- a/mysite/static/css/stylesheet.css
+++ b/mysite/static/css/stylesheet.css
@@ -67,6 +67,12 @@
     font-size: 1.5em;
   }
 
+.rich-text img {
+  display: block;
+  float: none;
+  margin: auto;
+}
+
   .contact-container #contact-form {
     padding: 24px;
   }
